--- a/reservas.html
+++ b/reservas.html
@@ -3,75 +3,120 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Reservas - Bar</title>
+  <title>Reservas - Bar 1930</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="reservas">
-  <div class="reserva-container">
-    <div class="step" id="step-1">
-      <h2>¿Cuántas personas?</h2>
-      <input type="number" id="personas" min="1" max="20" />
-      <button onclick="nextStep(2)">Siguiente</button>
-    </div>
+  <main class="reserva-container">
+    <section id="reserva-formulario">
+      <div class="form-slider">
 
-    <div class="step" id="step-2" style="display:none">
-      <h2>Selecciona una fecha</h2>
-      <input type="date" id="fecha" />
-      <button onclick="nextStep(3)">Siguiente</button>
-    </div>
+        <!-- Paso 1 -->
+        <div class="form-step active">
+          <h2>¿Cuántas personas?</h2>
+          <div class="counter">
+            <button onclick="changePeople(-1)">-</button>
+            <span id="peopleCount">2</span>
+            <button onclick="changePeople(1)">+</button>
+          </div>
+          <button class="next-btn" onclick="nextStep()">Siguiente</button>
+        </div>
 
-    <div class="step" id="step-3" style="display:none">
-      <h2>Selecciona una hora</h2>
-      <select id="hora"></select>
-      <button onclick="nextStep(4)">Siguiente</button>
-    </div>
+        <!-- Paso 2 -->
+        <div class="form-step">
+          <h2>Selecciona una fecha</h2>
+          <input type="date" id="reservaFecha" />
+          <button class="next-btn" onclick="nextStep()">Siguiente</button>
+        </div>
 
-    <div class="step" id="step-4" style="display:none">
-      <h2>Datos de la reserva</h2>
-      <input type="text" id="nombre" placeholder="Nombre" required />
-      <input type="tel" id="telefono" placeholder="Teléfono" required />
-      <input type="text" id="ocasión" placeholder="Tipo de ocasión (opcional)" />
-      <button onclick="confirmarReserva()">Confirmar</button>
-    </div>
+        <!-- Paso 3 -->
+        <div class="form-step">
+          <h2>Selecciona una hora</h2>
+          <div class="horarios">
+            <!-- Generados por JS -->
+          </div>
+          <button class="next-btn" onclick="nextStep()">Siguiente</button>
+        </div>
 
-    <div class="step" id="step-5" style="display:none">
-      <h2>Reserva confirmada</h2>
-      <p>Gracias por reservar con nosotros. Haz clic en el botón para confirmar por WhatsApp.</p>
-      <a id="whatsapp-link" class="boton" target="_blank">Enviar por WhatsApp</a>
-    </div>
-  </div>
+        <!-- Paso 4 -->
+        <div class="form-step">
+          <h2>Datos de la reserva</h2>
+          <input type="text" id="nombre" placeholder="Tu nombre" />
+          <input type="tel" id="telefono" placeholder="Tu teléfono" />
+          <input type="text" id="ocasión" placeholder="Tipo de ocasión (ej. cumpleaños)" />
+          <button class="next-btn" onclick="enviarReserva()">Confirmar</button>
+        </div>
+
+        <!-- Paso 5 -->
+        <div class="form-step confirmacion">
+          <h2>Reserva confirmada</h2>
+          <p>Tu solicitud ha sido enviada por WhatsApp</p>
+        </div>
+
+      </div>
+    </section>
+  </main>
 
   <script>
-    function nextStep(step) {
-      document.querySelectorAll('.step').forEach(s => s.style.display = 'none');
-      document.getElementById(`step-${step}`).style.display = 'block';
-    }
+    let currentStep = 0;
+    const steps = document.querySelectorAll(".form-step");
 
-    function confirmarReserva() {
-      const personas = document.getElementById('personas').value;
-      const fecha = document.getElementById('fecha').value;
-      const hora = document.getElementById('hora').value;
-      const nombre = document.getElementById('nombre').value;
-      const telefono = document.getElementById('telefono').value;
-      const ocasion = document.getElementById('ocasión').value;
-
-      const mensaje = `Hola, quiero hacer una reserva para ${personas} persona(s) el día ${fecha} a las ${hora}. Mi nombre es ${nombre}, teléfono: ${telefono}.${ocasion ? ' Ocasión: ' + ocasion : ''}`;
-      const telefonoBar = '573001234567'; // Cambia este número por el número real
-
-      const link = `https://wa.me/${telefonoBar}?text=${encodeURIComponent(mensaje)}`;
-      document.getElementById('whatsapp-link').href = link;
-      nextStep(5);
-    }
-
-    window.onload = () => {
-      const horaSelect = document.getElementById('hora');
-      const startHour = 17;
-      const endHour = 22;
-      for (let h = startHour; h < endHour; h++) {
-        horaSelect.innerHTML += `<option value="${h}:00">${h}:00</option>`;
-        horaSelect.innerHTML += `<option value="${h}:30">${h}:30</option>`;
+    function nextStep() {
+      if (currentStep < steps.length - 1) {
+        steps[currentStep].classList.remove("active");
+        currentStep++;
+        steps[currentStep].classList.add("active");
       }
-    };
+    }
+
+    function changePeople(val) {
+      const count = document.getElementById("peopleCount");
+      let n = parseInt(count.textContent);
+      n = Math.max(1, n + val);
+      count.textContent = n;
+    }
+
+    function seleccionarHora(hora) {
+      document.querySelectorAll(".hora").forEach(h => h.classList.remove("seleccionada"));
+      hora.classList.add("seleccionada");
+    }
+
+    function enviarReserva() {
+      const personas = document.getElementById("peopleCount").textContent;
+      const fecha = document.getElementById("reservaFecha").value;
+      const hora = document.querySelector(".hora.seleccionada")?.textContent;
+      const nombre = document.getElementById("nombre").value;
+      const telefono = document.getElementById("telefono").value;
+      const ocasion = document.getElementById("ocasión").value;
+
+      if (!fecha || !hora || !nombre || !telefono) {
+        alert("Por favor completa todos los campos");
+        return;
+      }
+
+      const mensaje = `Hola, quiero hacer una reserva para ${personas} personas el ${fecha} a las ${hora}. Mi nombre es ${nombre}, tel: ${telefono}. Ocasión: ${ocasion}`;
+      const url = `https://wa.me/573001112233?text=${encodeURIComponent(mensaje)}`;
+      window.open(url, "_blank");
+      nextStep();
+    }
+
+    // Generar horarios de 5:00 PM a 10:00 PM cada 30 min
+    const horarios = document.querySelector(".horarios");
+    for (let h = 17; h <= 21; h++) {
+      ["00", "30"].forEach(min => {
+        const hora = `${h}:${min}`;
+        const btn = document.createElement("button");
+        btn.textContent = hora;
+        btn.classList.add("hora");
+        btn.onclick = () => seleccionarHora(btn);
+        horarios.appendChild(btn);
+      });
+    }
+    const btnFinal = document.createElement("button");
+    btnFinal.textContent = "22:00";
+    btnFinal.classList.add("hora");
+    btnFinal.onclick = () => seleccionarHora(btnFinal);
+    horarios.appendChild(btnFinal);
   </script>
 </body>
 </html>
