--- a/reservas.html
+++ b/reservas.html
@@ -3,120 +3,111 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Reservas - Bar 1930</title>
+  <title>Reservas | 1930</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="reservas">
+<body class="reservas-body">
   <main class="reserva-container">
-    <section id="reserva-formulario">
-      <div class="form-slider">
+    <section class="form-slide active" id="paso1">
+      <h2>¿Cuántas personas?</h2>
+      <input type="number" id="personas" min="1" placeholder="Número de personas" />
+      <button onclick="nextPaso()">Siguiente</button>
+    </section>
 
-        <!-- Paso 1 -->
-        <div class="form-step active">
-          <h2>¿Cuántas personas?</h2>
-          <div class="counter">
-            <button onclick="changePeople(-1)">-</button>
-            <span id="peopleCount">2</span>
-            <button onclick="changePeople(1)">+</button>
-          </div>
-          <button class="next-btn" onclick="nextStep()">Siguiente</button>
-        </div>
+    <section class="form-slide" id="paso2">
+      <h2>Selecciona una fecha</h2>
+      <input type="date" id="fecha" />
+      <button onclick="prevPaso()">Atrás</button>
+      <button onclick="nextPaso()">Siguiente</button>
+    </section>
 
-        <!-- Paso 2 -->
-        <div class="form-step">
-          <h2>Selecciona una fecha</h2>
-          <input type="date" id="reservaFecha" />
-          <button class="next-btn" onclick="nextStep()">Siguiente</button>
-        </div>
+    <section class="form-slide" id="paso3">
+      <h2>Selecciona la hora</h2>
+      <select id="hora">
+        <option value="" disabled selected>Selecciona una hora</option>
+        <script>
+          const select = document.currentScript.parentElement.querySelector('select');
+          for (let h = 17; h <= 21; h++) {
+            select.innerHTML += `<option value="${h}:00">${h}:00</option>`;
+            select.innerHTML += `<option value="${h}:30">${h}:30</option>`;
+          }
+          select.innerHTML += `<option value="22:00">22:00</option>`;
+        </script>
+      </select>
+      <button onclick="prevPaso()">Atrás</button>
+      <button onclick="nextPaso()">Siguiente</button>
+    </section>
 
-        <!-- Paso 3 -->
-        <div class="form-step">
-          <h2>Selecciona una hora</h2>
-          <div class="horarios">
-            <!-- Generados por JS -->
-          </div>
-          <button class="next-btn" onclick="nextStep()">Siguiente</button>
-        </div>
+    <section class="form-slide" id="paso4">
+      <h2>Tus datos</h2>
+      <input type="text" id="nombre" placeholder="Tu nombre" />
+      <input type="tel" id="telefono" placeholder="Tu número de teléfono" />
+      <input type="text" id="ocasion" placeholder="¿Qué ocasión celebras?" />
+      <button onclick="prevPaso()">Atrás</button>
+      <button onclick="nextPaso()">Siguiente</button>
+    </section>
 
-        <!-- Paso 4 -->
-        <div class="form-step">
-          <h2>Datos de la reserva</h2>
-          <input type="text" id="nombre" placeholder="Tu nombre" />
-          <input type="tel" id="telefono" placeholder="Tu teléfono" />
-          <input type="text" id="ocasión" placeholder="Tipo de ocasión (ej. cumpleaños)" />
-          <button class="next-btn" onclick="enviarReserva()">Confirmar</button>
-        </div>
-
-        <!-- Paso 5 -->
-        <div class="form-step confirmacion">
-          <h2>Reserva confirmada</h2>
-          <p>Tu solicitud ha sido enviada por WhatsApp</p>
-        </div>
-
-      </div>
+    <section class="form-slide" id="paso5">
+      <h2>Confirmar reserva</h2>
+      <div id="resumen"></div>
+      <button onclick="prevPaso()">Atrás</button>
+      <a id="confirmarBtn" class="btn" href="#" target="_blank">Confirmar vía WhatsApp</a>
     </section>
   </main>
 
   <script>
-    let currentStep = 0;
-    const steps = document.querySelectorAll(".form-step");
+    const pasos = document.querySelectorAll('.form-slide');
+    let pasoActual = 0;
 
-    function nextStep() {
-      if (currentStep < steps.length - 1) {
-        steps[currentStep].classList.remove("active");
-        currentStep++;
-        steps[currentStep].classList.add("active");
-      }
-    }
-
-    function changePeople(val) {
-      const count = document.getElementById("peopleCount");
-      let n = parseInt(count.textContent);
-      n = Math.max(1, n + val);
-      count.textContent = n;
-    }
-
-    function seleccionarHora(hora) {
-      document.querySelectorAll(".hora").forEach(h => h.classList.remove("seleccionada"));
-      hora.classList.add("seleccionada");
-    }
-
-    function enviarReserva() {
-      const personas = document.getElementById("peopleCount").textContent;
-      const fecha = document.getElementById("reservaFecha").value;
-      const hora = document.querySelector(".hora.seleccionada")?.textContent;
-      const nombre = document.getElementById("nombre").value;
-      const telefono = document.getElementById("telefono").value;
-      const ocasion = document.getElementById("ocasión").value;
-
-      if (!fecha || !hora || !nombre || !telefono) {
-        alert("Por favor completa todos los campos");
-        return;
-      }
-
-      const mensaje = `Hola, quiero hacer una reserva para ${personas} personas el ${fecha} a las ${hora}. Mi nombre es ${nombre}, tel: ${telefono}. Ocasión: ${ocasion}`;
-      const url = `https://wa.me/573001112233?text=${encodeURIComponent(mensaje)}`;
-      window.open(url, "_blank");
-      nextStep();
-    }
-
-    // Generar horarios de 5:00 PM a 10:00 PM cada 30 min
-    const horarios = document.querySelector(".horarios");
-    for (let h = 17; h <= 21; h++) {
-      ["00", "30"].forEach(min => {
-        const hora = `${h}:${min}`;
-        const btn = document.createElement("button");
-        btn.textContent = hora;
-        btn.classList.add("hora");
-        btn.onclick = () => seleccionarHora(btn);
-        horarios.appendChild(btn);
+    function showPaso(index) {
+      pasos.forEach((p, i) => {
+        p.classList.remove('active');
+        if (i === index) {
+          p.classList.add('active');
+        }
       });
     }
-    const btnFinal = document.createElement("button");
-    btnFinal.textContent = "22:00";
-    btnFinal.classList.add("hora");
-    btnFinal.onclick = () => seleccionarHora(btnFinal);
-    horarios.appendChild(btnFinal);
+
+    function nextPaso() {
+      if (pasoActual < pasos.length - 1) {
+        pasoActual++;
+        showPaso(pasoActual);
+        if (pasoActual === pasos.length - 1) {
+          mostrarResumen();
+        }
+      }
+    }
+
+    function prevPaso() {
+      if (pasoActual > 0) {
+        pasoActual--;
+        showPaso(pasoActual);
+      }
+    }
+
+    function mostrarResumen() {
+      const personas = document.getElementById('personas').value;
+      const fecha = document.getElementById('fecha').value;
+      const hora = document.getElementById('hora').value;
+      const nombre = document.getElementById('nombre').value;
+      const telefono = document.getElementById('telefono').value;
+      const ocasion = document.getElementById('ocasion').value;
+
+      const resumen = `
+        <p><strong>Personas:</strong> ${personas}</p>
+        <p><strong>Fecha:</strong> ${fecha}</p>
+        <p><strong>Hora:</strong> ${hora}</p>
+        <p><strong>Nombre:</strong> ${nombre}</p>
+        <p><strong>Teléfono:</strong> ${telefono}</p>
+        <p><strong>Ocasión:</strong> ${ocasion}</p>
+      `;
+
+      document.getElementById('resumen').innerHTML = resumen;
+
+      const mensaje = `Hola, quiero reservar una mesa en 1930:\n- Personas: ${personas}\n- Fecha: ${fecha}\n- Hora: ${hora}\n- Nombre: ${nombre}\n- Teléfono: ${telefono}\n- Ocasión: ${ocasion}`;
+      const whatsappURL = `https://wa.me/573001112233?text=${encodeURIComponent(mensaje)}`;
+      document.getElementById('confirmarBtn').href = whatsappURL;
+    }
   </script>
 </body>
 </html>
