--- a/reservas.html
+++ b/reservas.html
@@ -3,95 +3,107 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reservas - 1930</title>
-  <link rel="stylesheet" href="base.css">
-  <link rel="stylesheet" href="reservas.css">
+  <title>Reservas | 1930</title>
+  <link rel="stylesheet" href="base.css" />
+  <link rel="stylesheet" href="reservas.css" />
 </head>
 <body>
-  <div class="reserva-wrapper">
-    <div class="form-container" id="formContainer">
-      <!-- Paso 1 -->
-      <section class="form-step active">
-        <h2>¿Cuántas personas?</h2>
-        <input type="number" id="personas" placeholder="Ej: 4" min="1" />
-        <button onclick="siguientePaso()">Siguiente</button>
-      </section>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="#reservar">Reservar</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <!-- Paso 2 -->
-      <section class="form-step">
-        <h2>Selecciona la fecha</h2>
-        <input type="date" id="fecha" />
-        <button onclick="siguientePaso()">Siguiente</button>
-      </section>
+  <main class="reserva-main">
+    <section class="reserva-formulario">
+      <h1>Reserva tu experiencia</h1>
+      <div class="reserva-slider">
 
-      <!-- Paso 3 -->
-      <section class="form-step">
-        <h2>Selecciona la hora</h2>
-        <select id="hora">
-          <option value="">Selecciona una hora</option>
-          <script>
-            const select = document.currentScript.parentElement.querySelector("select");
-            const start = 17;
-            for (let i = 0; i <= 10; i++) {
-              let hour = start + Math.floor(i / 2);
-              let minutes = i % 2 === 0 ? "00" : "30";
-              let value = hour.toString().padStart(2, "0") + ":" + minutes;
-              select.innerHTML += `<option value="${value}">${value}</option>`;
-            }
-          </script>
-        </select>
-        <button onclick="siguientePaso()">Siguiente</button>
-      </section>
+        <!-- Paso 1 -->
+        <div class="reserva-step active">
+          <h2>Número de personas</h2>
+          <input type="number" min="1" max="20" id="personas" placeholder="Ej: 2" />
+          <button onclick="nextStep()">Siguiente</button>
+        </div>
 
-      <!-- Paso 4 -->
-      <section class="form-step">
-        <h2>Datos personales</h2>
-        <input type="text" id="nombre" placeholder="Nombre completo" />
-        <input type="tel" id="telefono" placeholder="Teléfono" />
-        <input type="text" id="ocasion" placeholder="¿Qué ocasión es?" />
-        <button onclick="siguientePaso()">Siguiente</button>
-      </section>
+        <!-- Paso 2 -->
+        <div class="reserva-step">
+          <h2>Selecciona la fecha</h2>
+          <input type="date" id="fecha" />
+          <button onclick="nextStep()">Siguiente</button>
+        </div>
 
-      <!-- Paso 5 -->
-      <section class="form-step">
-        <h2>Confirmar Reserva</h2>
-        <p id="resumen"></p>
-        <a id="btnConfirmar" class="btn" target="_blank">Confirmar por WhatsApp</a>
-      </section>
-    </div>
-  </div>
+        <!-- Paso 3 -->
+        <div class="reserva-step">
+          <h2>Elige la hora</h2>
+          <select id="hora">
+            <option value="">Selecciona</option>
+            <option>5:00 PM</option>
+            <option>5:30 PM</option>
+            <option>6:00 PM</option>
+            <option>6:30 PM</option>
+            <option>7:00 PM</option>
+            <option>7:30 PM</option>
+            <option>8:00 PM</option>
+            <option>8:30 PM</option>
+            <option>9:00 PM</option>
+            <option>9:30 PM</option>
+            <option>10:00 PM</option>
+          </select>
+          <button onclick="nextStep()">Siguiente</button>
+        </div>
+
+        <!-- Paso 4 -->
+        <div class="reserva-step">
+          <h2>Datos personales</h2>
+          <input type="text" id="nombre" placeholder="Nombre completo" />
+          <input type="tel" id="telefono" placeholder="Teléfono" />
+          <input type="text" id="ocasión" placeholder="¿Qué ocasión es? (opcional)" />
+          <button onclick="nextStep()">Siguiente</button>
+        </div>
+
+        <!-- Paso 5 -->
+        <div class="reserva-step">
+          <h2>Confirmar</h2>
+          <p>Revisa los datos y envía tu reserva.</p>
+          <button onclick="enviarWhatsApp()">Enviar por WhatsApp</button>
+        </div>
+
+      </div>
+    </section>
+  </main>
 
   <script>
-    let pasoActual = 0;
-    const pasos = document.querySelectorAll('.form-step');
+    let currentStep = 0;
 
-    function siguientePaso() {
-      if (pasoActual < pasos.length - 1) {
-        pasos[pasoActual].classList.remove('active');
-        pasoActual++;
-        pasos[pasoActual].classList.add('active');
-        document.getElementById("formContainer").style.transform = `translateX(-${pasoActual * 100}%)`;
+    function nextStep() {
+      const steps = document.querySelectorAll(".reserva-step");
+      if (currentStep < steps.length - 1) {
+        steps[currentStep].classList.remove("active");
+        currentStep++;
+        steps[currentStep].classList.add("active");
+      }
+    }
 
-        if (pasoActual === pasos.length - 1) {
-          const nombre = document.getElementById("nombre").value;
-          const telefono = document.getElementById("telefono").value;
-          const personas = document.getElementById("personas").value;
-          const fecha = document.getElementById("fecha").value;
-          const hora = document.getElementById("hora").value;
-          const ocasion = document.getElementById("ocasion").value;
+    function enviarWhatsApp() {
+      const nombre = document.getElementById("nombre").value;
+      const telefono = document.getElementById("telefono").value;
+      const personas = document.getElementById("personas").value;
+      const fecha = document.getElementById("fecha").value;
+      const hora = document.getElementById("hora").value;
+      const ocasion = document.getElementById("ocasión").value;
 
-          const mensaje = `Hola, quiero hacer una reserva:
-
+      const mensaje = `Hola, quiero reservar una mesa para ${personas} persona(s) el ${fecha} a las ${hora}.
 Nombre: ${nombre}
 Teléfono: ${telefono}
-Personas: ${personas}
-Fecha: ${fecha}
-Hora: ${hora}
-Ocasión: ${ocasion}`;
-          document.getElementById("resumen").innerText = mensaje;
-          document.getElementById("btnConfirmar").href = `https://wa.me/573001112233?text=${encodeURIComponent(mensaje)}`;
-        }
-      }
+Ocasión: ${ocasion || "Ninguna indicada"}`;
+
+      const numero = "573123456789"; // Reemplazar por número del bar
+      const url = `https://wa.me/${numero}?text=${encodeURIComponent(mensaje)}`;
+      window.open(url, "_blank");
     }
   </script>
 </body>
